--- a/ChinookSolution/WebApp/Site.Master
+++ b/ChinookSolution/WebApp/Site.Master
@@ -83,6 +83,7 @@
                                 <asp:MenuItem Text="Samples" Value="Samples" NavigateUrl="~/SamplePages/FilterSearchCRUD.aspx"></asp:MenuItem>
                                <asp:MenuItem Text="ListViewCRUDODS" Value="Samples" NavigateUrl="~/SamplePages/ListViewCRUDODS.aspx"></asp:MenuItem>
                                 <asp:MenuItem Text="LinqPad to WebApp" Value="Samples" NavigateUrl="~/SamplePages/DisplayArtistAlbums.aspx"></asp:MenuItem>
+                              <asp:MenuItem Text="Repeater Display" Value="Samples" NavigateUrl="~/SamplePages/RepeaterDisplay.aspx"></asp:MenuItem>
                         </Items>
 
 
